Compiler/tests/good/Output/03_output.rs
// Single line comment
fn main(){
  println!(-1);
  return;
}
