Compiler/tests/bad/Loops/04_loop.rs
fn main()
{
    while false {
        println!(3);
    }
    break;
}
